<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.6</version>
		<relativePath/>
	</parent>
	<groupId>io.github.tex1988</groupId>
	<artifactId>spring-boot-starter-rabbit-rpc</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>spring-boot-starter-rabbit-rpc</name>
	<description>Spring Boot starter and implementation of RPC over RabbitMQ (spring-boot-starter-amqp)</description>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>tex1988</id>
			<name>Oleksii Zinkevych</name>
			<email>tex198826@gmail.com</email>
			<url>https://github.com/tex1988</url>
			<timezone>EET</timezone>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/tex1988/spring-boot-starter-rabbit-rpc.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/tex1988/spring-boot-starter-rabbit-rpc.git</developerConnection>
		<url>https://github.com/tex1988/spring-boot-starter-rabbit-rpc</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/tex1988/spring-boot-starter-rabbit-rpc/issues</url>
	</issueManagement>
	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<gpgArguments>
						<arg>--batch</arg>
						<arg>--passphrase</arg>
						<arg>${env.GPG_PASSPHRASE}</arg>
					</gpgArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
